--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
@@ -136,21 +136,21 @@
 }
 
 .searchResult .listType .item .content .detailes {
-    flex-flow: row;
+    /*flex-flow: row;*/
 }
 
 .searchResult .listType .item .content .detailes .videoDetaileWrapper {
-    /*padding-left: 50px;*/
-    /*padding-right: 20px;*/
-    /*line-height: 25px;*/
-
+    padding-left: 100px;
     padding-right: 20px;
-    padding-left: 0;
     line-height: 25px;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
+
+    /*padding-right: 20px;*/
+    /*padding-left: 0;*/
+    /*line-height: 25px;*/
+    /*-webkit-box-flex: 0;*/
+    /*-ms-flex: 0 0 50%;*/
+    /*flex: 0 0 50%;*/
+    /*max-width: 50%;*/
 }
 .searchResult .listType .item .content .detailes .videoDetaileWrapper svg {
     display: inline-block;
@@ -159,18 +159,19 @@
     margin-left: 2px;
 }
 .searchResult .listType .item .content .detailes .videoDescription {
-    /*padding-right: 20px;*/
-    /*padding-left: 50px;*/
-    /*line-height: 20px;*/
-
     padding-right: 20px;
-    padding-left: 0;
+    padding-left: 100px;
     line-height: 20px;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
     text-align: justify;
+
+    /*padding-right: 20px;*/
+    /*padding-left: 0;*/
+    /*line-height: 20px;*/
+    /*-webkit-box-flex: 0;*/
+    /*-ms-flex: 0 0 50%;*/
+    /*flex: 0 0 50%;*/
+    /*max-width: 50%;*/
+    /*text-align: justify;*/
 }
 
 .searchResultColumn .searchResult .carouselType {
@@ -215,9 +216,9 @@
     top: 0;
 }
 .searchResult .listType .item .content .detailes .videoOrder {
-    /*position: absolute;*/
-    /*left: 0;*/
-    /*top: 0;*/
+    position: absolute;
+    left: 0;
+    top: 0;
     color: white;
 }
 .searchResult .listType .item .content .detailes .videoOrder .videoOrder-title {
@@ -237,19 +238,23 @@
     margin: 0 5px;
 }
 .searchResult .listType .item .content .detailes .videoOrder .videoOrder-om {
-    display: inline-block;
+    /*display: inline-block;*/
     color: #ff9000;
+    display: none;
 }
 
 .SearchColumnsWrapper {
     justify-content: center;
 }
 
+.searchResult .listType .item.a--gtm-eec-product {
+    background: #d2d2d2 !important;
+}
 
+.searchResult .listType .item.a--gtm-eec-product .content .detailes {
+    text-align: justify;
+}
 
-/*.searchResult .listType .item .content .detailes .videoDescription*/
-/*.searchResult .listType .item .content .detailes .videoDetaileWrapper*/
-/*.searchResult .listType .item .content .detailes*/
 
 @media only screen and (max-width: 1700px)  {
     .SearchBoxFilterColumn {
@@ -296,6 +301,14 @@
     .searchResultColumn {
         position: relative;
         width: 100%;
+    }
+}
+@media only screen and (min-width: 1025px)  {
+    .item.a--gtm-eec-product .pic {
+        width: 15% !important;
+    }
+    .item.a--gtm-eec-product .content {
+        width: 85% !important;
     }
 }
 @media only screen and (min-width: 1024px)  {
@@ -382,6 +395,9 @@
         width: 100%;
     }
 
+    .searchResult .listType .item .content .detailes .videoDescription {
+        padding-left: 0 !important;
+    }
 }
 @media only screen and (min-width: 1190px)  {
     .ProductAndSetAndVideoWraper {
