--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -194,6 +194,7 @@
 
       .a--block-infoWrapper {
         margin-bottom: 28px;
+        position: relative;
 
         .a--block-titleWrapper {
           padding: 5px 10px;
