--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
@@ -124,6 +124,10 @@
     background-color: #ff90003d;
 }
 
+.SearchBoxFilter .GroupFilters .body .m-checkbox-list {
+    min-height: 45px;
+}
+
 .SearchBoxFilter .GroupFilters .body .showMoreItems {
     width: 100%;
     background: white;
