--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -196,6 +196,9 @@
         }
         .a--block-set-count-icon {
           color: white;
+          svg {
+            width: 25px;
+          }
         }
       }
       .a--block-set-author-pic {
