--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
@@ -130,13 +130,19 @@
 
 .SearchBoxFilter .GroupFilters .body .showMoreItems {
     width: 100%;
-    background: white;
     border: none;
     text-align: right;
     padding-right: 30px;
     position: absolute;
     bottom: 0;
     height: 20px;
+
+    background-color: #ff9000;
+    color: white;
+    font-weight: bold;
+    -webkit-box-shadow: 0px -5px 10px 2px rgba(255,255,255,1);
+    -moz-box-shadow: 0px -5px 10px 2px rgba(255,255,255,1);
+    box-shadow: 0px -5px 10px 2px rgb(255, 255, 255);
 }
 
 .searchResult .listType .item .content .detailes {
