--- a/public/acm/AlaatvCustomFiles/components/AlaaLoading/style.css
+++ b/public/acm/AlaatvCustomFiles/components/AlaaLoading/style.css
@@ -4,7 +4,7 @@
     lef: 0;
     width: 100%;
     height: 100%;
-    background: rgba(128, 128, 128, 0.31);
+    background: #ff900069;
     display: flex;
     justify-content: center;
     align-items: center;
