--- a/public/acm/AlaatvCustomFiles/components/Favorite/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/Favorite/style.scss
@@ -1,7 +1,5 @@
 .btnFavorite {
-  position: absolute;
-  left: 10px;
-  top: 10px;
+  position: relative;
   cursor: pointer;
   display: flex;
   align-items: center;
