--- a/public/acm/AlaatvCustomFiles/css/page/content-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/content-show.css
@@ -60,6 +60,20 @@
     overflow: auto;
 }
 
+.contentDetailesWrapper {
+    position: relative;
+}
+
+.contentDetailesWrapper .contentTitleH1 {
+    padding-left: 70px;
+}
+
+.btnFavorite {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
 /*media query*/
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
     .a-widget5 .a-widget5__item .a-widget5__content .a-widget5__pic,
