set show webpack update

--- a/public/acm/AlaatvCustomFiles/css/page/set-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/set-show.css
@@ -9,3 +9,33 @@
 .m-portlet__head-tools > .nav {
     line-height: 50px;
 }
+
+.contentsetListHead {
+    height: auto !important;
+}
+.contentsetListHead .m-portlet__head-tools {
+    display: flex;
+    flex-flow: column;
+    padding: 5px 0;
+}
+.FavoriteAndOrder {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+}
+.FavoriteAndOrder .btnFavorite {
+
+}
+.FavoriteAndOrder .Order {
+    margin-left: 10px;
+}
+.FavoriteAndOrder .Order a i {
+    font-size: 25px;
+}
+.countOfItems {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+}
