--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
@@ -145,6 +145,11 @@
     box-shadow: 0px -5px 10px 2px rgb(255, 255, 255);
 }
 
+.SearchBoxFilter .GroupFilters .body .showMoreItems i {
+    margin-left: 5px;
+    font-size: 10px;
+}
+
 .searchResult .listType .item .content .detailes {
     /*flex-flow: row;*/
 }
