--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -23,6 +23,12 @@
 /*scrollbar*/
 
 .ScrollCarousel {
+  * {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
