--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -2,6 +2,7 @@
   .a--owl-carousel-Wraper {
     background: transparent;
     box-shadow: none;
+    margin-bottom: 7px;
 
     .a--owl-carousel-head {
       background: white;
