--- a/public/acm/AlaatvCustomFiles/css/customStyle/footer.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle/footer.css
@@ -1,10 +1,35 @@
+.m-footer {
+  padding: 0;
+  margin-top: 5px;
+}
+.m-footer .alaaNamad {
+  margin: auto;
+  width: 100%;
+  text-align: center;
+  background: #e1e1e1;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-top: solid 1px #d5d5d5;
+  border-bottom: solid 1px #d5d5d5;
+}
+.m-footer__nav.m-nav.m-nav--inline > .m-nav__item > .m-nav__link {
+  color: #a4a4a4;
+}
 .m-footer__nav.m-nav.m-nav--inline > .m-nav__item > .m-nav__link i {
   font-size: 30px;
   line-height: 30px;
 }
 .m-footer__nav.m-nav.m-nav--inline > .m-nav__item img {
-  height: 40px;
+  height: 90px;
   width: auto;
   margin-top: 5px;
+  margin-left: 30px;
   cursor: pointer;
+}
+
+@media only screen and (max-width: 1024px) {
+  .m-footer__nav.m-nav.m-nav--inline > .m-nav__item img {
+    height: 40px;
+    margin-left: 0;
+  }
 }
