--- a/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/OwlCarouselType2/style.scss
@@ -2,7 +2,7 @@
   .a--owl-carousel-Wraper {
     background: transparent;
     box-shadow: none;
-    margin-bottom: 7px;
+    margin-bottom: 10px;
 
     .a--owl-carousel-head {
       background: white;
@@ -61,7 +61,6 @@
       //  transform: none;
       //}
     }
-
 
     .a--owl-carousel-slide-detailes {
       position: relative;
@@ -133,13 +132,11 @@
   }
 }
 
-
-
 .a--block-item {
 
   -webkit-box-shadow: 0 1px 4px 1px rgba(55, 41, 84, 0.3) !important;
   box-shadow: 0 1px 4px 1px rgba(55, 41, 84, 0.3) !important;
-  margin-bottom: 5px;
+  margin-bottom: 0;
   margin-top: 5px;
   background: white;
 
