--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search.css
@@ -33,7 +33,7 @@
 }
 
 .a--owl-carousel-type-1 .item .m-portlet > .m-portlet__body {
-    padding-bottom: 0px;
+    padding-bottom: 0;
 }
 
 .a--owl-carousel-type-1 .item > .m-portlet {
@@ -73,7 +73,7 @@
 }
 .m-widget19__pic .btnViewMore:hover {
     transform:scale(1.1, 1.1);
-    box-shadow: 0px 0px 10px 5px #00A3B6 !important;
+    box-shadow: 0 0 10px 5px #00A3B6 !important;
 }
 .ProductAndSetAndVideoWraper,
 .PamphletAndArticleWraper {
@@ -140,9 +140,9 @@
     background-color: #ff9000;
     color: white;
     font-weight: bold;
-    -webkit-box-shadow: 0px -5px 10px 2px rgba(255,255,255,1);
-    -moz-box-shadow: 0px -5px 10px 2px rgba(255,255,255,1);
-    box-shadow: 0px -5px 10px 2px rgb(255, 255, 255);
+    -webkit-box-shadow: 0 -5px 10px 2px rgba(255,255,255,1);
+    -moz-box-shadow: 0 -5px 10px 2px rgba(255,255,255,1);
+    box-shadow: 0 -5px 10px 2px rgb(255, 255, 255);
 }
 
 .SearchBoxFilter .GroupFilters .body .showMoreItems i {
@@ -276,6 +276,20 @@
     justify-content: center;
 }
 
+.notFoundMessage {
+    display: none;
+}
+
+.pageTags .m-list-badge {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+}
+.pageTags .m-list-badge .m-badge {
+    white-space: nowrap;
+    min-width: auto;
+}
+
 @media only screen and (max-width: 1700px)  {
     .SearchBoxFilterColumn {
         -webkit-box-flex: 0;
@@ -295,6 +309,18 @@
     }
 }
 @media only screen and (min-width: 1700px)  {
+
+    .SearchColumnsWrapper.maxWidth .SearchBoxFilterColumn{
+        -ms-flex: 0 0 20%;
+        flex: 0 0 20%;
+        max-width: 20%;
+    }
+    .SearchColumnsWrapper.maxWidth .searchResultColumn {
+        -ms-flex: 0 0 80%;
+        flex: 0 0 80%;
+        max-width: 80%;
+    }
+
     .SearchBoxFilterColumn {
         -webkit-box-flex: 0;
         -ms-flex: 0 0 15%;
@@ -405,9 +431,9 @@
 
     .searchResult .listType .item  {
         display: block;
-        -webkit-box-shadow: 0px 0px 5px -2px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 0px 5px -2px rgba(0,0,0,0.75);
-        box-shadow: 0px 0px 5px -2px
+        -webkit-box-shadow: 0 0 5px -2px rgba(0,0,0,0.75);
+        -moz-box-shadow: 0 0 5px -2px rgba(0,0,0,0.75);
+        box-shadow: 0 0 5px -2px
         rgba(0,0,0,0.75);
     }
     .searchResult .listType .item .pic,
