product show btn add to cart hide in mobile

--- a/public/acm/AlaatvCustomFiles/css/page/product-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product-show.css
@@ -393,4 +393,7 @@
     .addToCartForMobileDeviceWrapper {
         display: block;
     }
+    .productInfoNav-btnAddToCart {
+        display: none !important;
+    }
 }
