--- a/public/acm/AlaatvCustomFiles/css/page/product-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product-show.css
@@ -174,6 +174,7 @@
 
 #Block-sampleVideo .m-portlet__head,
 #productDetailes .m-portlet__head,
+#productLiveDescription .m-portlet__head,
 #Block-relatedProduct .m-portlet__head {
     height: 50px;
 }
