sidebar mega menu just show in mobile

--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -373,6 +373,16 @@
 
 
 
+.megamenuForMobiveInSidebar {
+    display: none !important;
+}
+
+@media only screen and (max-width: 1024px) {
+    .megamenuForMobiveInSidebar {
+        display: block !important;
+    }
+}
+
 @media only screen and (max-width: 1800px) {
     #carouselMainSlideShow .carousel-inner {
         min-height: 719.922px;
