--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -163,20 +163,20 @@ select.form-control {
 }
 
 @media only screen and (max-width: 1250px) {
-    .m-header-menu .m-menu__nav > .m-menu__item {
-        padding-left: 3px;
-        padding-right: 3px;
-    }
+    /*.m-header-menu .m-menu__nav > .m-menu__item {*/
+    /*    padding-left: 3px;*/
+    /*    padding-right: 3px;*/
+    /*}*/
     .m-topbar .m-topbar__nav.m-nav > .m-nav__item {
         padding: 0 3px;
     }
 }
 
 @media only screen and (max-width: 1128px) {
-    .m-header-menu .m-menu__nav > .m-menu__item {
-        padding-left: 0;
-        padding-right: 0;
-    }
+    /*.m-header-menu .m-menu__nav > .m-menu__item {*/
+    /*    padding-left: 0;*/
+    /*    padding-right: 0;*/
+    /*}*/
     .m-topbar .m-topbar__nav.m-nav > .m-nav__item {
         padding: 0;
     }
