--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -29,6 +29,7 @@
     -ms-user-select: none;
     user-select: none;
   }
+  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
