--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -279,6 +279,18 @@
     content: "\f104" !important;
 }
 
+.m-accordion.m-accordion--toggle-arrow .m-accordion__item .m-accordion__item-head .m-accordion__item-mode,
+.m-accordion.m-accordion--toggle-arrow .m-accordion__item .m-accordion__item-head.collapsed .m-accordion__item-mode {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+}
+.m-accordion.m-accordion--toggle-arrow .m-accordion__item .m-accordion__item-head.collapsed .m-accordion__item-mode::before {
+    content: "\f078";
+}
+.m-accordion.m-accordion--toggle-arrow .m-accordion__item .m-accordion__item-head .m-accordion__item-mode::before {
+    content: "\f077";
+}
+
 .m-switch.m-switch--icon input:empty ~ span::after {
     font-family: "Font Awesome 5 Free";
     content: "\f00c";
