--- a/public/acm/AlaatvCustomFiles/components/alaa_old/plugins/datatables/plugins/bootstrap/datatables.bootstrap-rtl.css
+++ b/public/acm/AlaatvCustomFiles/components/alaa_old/plugins/datatables/plugins/bootstrap/datatables.bootstrap-rtl.css
@@ -148,3 +148,6 @@ table.table-bordered.dataTable tbody th, table.table-bordered.dataTable tbody td
 div.dataTables_scrollHead table.table-bordered {
     border-bottom-width: 0;
 }
+.table-scrollable {
+    overflow: auto;
+}
