--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -395,6 +395,11 @@
     }
 }
 
+@media only screen and (min-width: 1700px) {
+    .m-body .m-content.boxed {
+        padding: 10px 100px 30px 100px;
+    }
+}
 @media only screen and (max-width: 1800px) {
     #carouselMainSlideShow .carousel-inner {
         min-height: 719.922px;
