--- a/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/ScrollCarousel/style.scss
@@ -1,89 +1,92 @@
 /*scrollbar*/
 /* width */
 .ScrollCarousel-Items::-webkit-scrollbar {
-  width: 9px;
-  height: 9px;
+    width: 9px;
+    height: 9px;
 }
 
 /* Track */
 .ScrollCarousel-Items::-webkit-scrollbar-track {
-  background: #ffefdb;
+    background: #ffefdb;
 }
 
 /* Handle */
 .ScrollCarousel-Items::-webkit-scrollbar-thumb {
-  background: #ff9000;
-  border-radius: 10px;
+    background: #ff9000;
+    border-radius: 10px;
 }
 
 /* Handle on hover */
 .ScrollCarousel-Items::-webkit-scrollbar-thumb:hover {
-  background: #ff6c00;
+    background: #ff6c00;
 }
+
 /*scrollbar*/
 
 .ScrollCarousel {
-  .ScrollCarousel-Items {
-    * {
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    overflow-x: auto;
-    width: 100%;
-    overflow-y: hidden;
-    padding-bottom: 5px;
-    scrollbar-color: #ff9000 #ffe0b8;
-    scrollbar-width: thin;
-    .item {
-      position: relative;
-      margin-left: 10px;
-      -webkit-box-flex: 0;
+    .ScrollCarousel-Items {
+        * {
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
 
-      -webkit-flex-grow: 0;
-      -ms-flex-grow: 0;
-      flex-grow: 0;
+        position: relative;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        overflow-x: auto;
+        width: 100%;
+        overflow-y: hidden;
+        padding-bottom: 5px;
+        scrollbar-color: #ff9000 #ffe0b8;
+        scrollbar-width: thin;
 
-      -webkit-flex-shrink: 0;
-      -ms-flex-shrink: 0;
-      flex-shrink: 0;
-    }
+        .item {
+            position: relative;
+            margin-left: 10px;
+            -webkit-box-flex: 0;
+
+            -webkit-flex-grow: 0;
+            -ms-flex-grow: 0;
+            flex-grow: 0;
+
+            -webkit-flex-shrink: 0;
+            -ms-flex-shrink: 0;
+            flex-shrink: 0;
+        }
 
 
-    //@for $a from 1 through 9 {
-    //  @for $b from 1 through 9 {
-    //    @for $c from 1 through 9 {
-    //      @for $d from 1 through 9 {
-    //        @for $e from 1 through 9 {
-    //          @for $f from 1 through 9 {
-    //            @for $g from 1 through 9 {
-    //
-    //              @debug 'w-#{$a}#{$b}#{$c}#{$d}#{$e}#{$f}#{$g}';
-    //
-    //              @include make-size-media('w-#{$a}#{$b}#{$c}#{$d}#{$e}#{$f}#{$g}',
-    //                      $a,
-    //                      $b,
-    //                      $c,
-    //                      $d,
-    //                      $e,
-    //                      $f,
-    //                      $g
-    //              );
-    //            }
-    //          }
-    //        }
-    //      }
-    //    }
-    //  }
-    //}
+        //@for $a from 1 through 9 {
+        //  @for $b from 1 through 9 {
+        //    @for $c from 1 through 9 {
+        //      @for $d from 1 through 9 {
+        //        @for $e from 1 through 9 {
+        //          @for $f from 1 through 9 {
+        //            @for $g from 1 through 9 {
+        //
+        //              @debug 'w-#{$a}#{$b}#{$c}#{$d}#{$e}#{$f}#{$g}';
+        //
+        //              @include make-size-media('w-#{$a}#{$b}#{$c}#{$d}#{$e}#{$f}#{$g}',
+        //                      $a,
+        //                      $b,
+        //                      $c,
+        //                      $d,
+        //                      $e,
+        //                      $f,
+        //                      $g
+        //              );
+        //            }
+        //          }
+        //        }
+        //      }
+        //    }
+        //  }
+        //}
 
-    @mixin make-size-media($sizeName,
+        @mixin make-size-media($sizeName,
                                     $column-count-1701pxToHigher,
                                     $column-count-BW1281pxTo1700px,
                                     $column-count-BW1025pxTo1280px,
@@ -93,139 +96,158 @@
                                     $column-count-BW320pxTo480px,
                                     $column-count-BW0pxTo320px
 
-    ) {
+        ) {
 
-      /*
-        ##Device = Desktops
-        ##Screen = 1701px to higher resolution desktops
-      */
-      @media (min-width: 1701px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-1701pxToHigher)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Desktops
+              ##Screen = 1701px to higher resolution desktops
+            */
+            @media (min-width: 1701px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-1701pxToHigher)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      /*
-        ##Device = Desktops
-        ##Screen = B/w 1281px to 1700px
-      */
-      @media (min-width: 1281px) and (max-width: 1700px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW1281pxTo1700px)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Desktops
+              ##Screen = B/w 1281px to 1700px
+            */
+            @media (min-width: 1281px) and (max-width: 1700px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW1281pxTo1700px)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      /*
-        ##Device = Laptops, Desktops
-        ##Screen = B/w 1025px to 1280px
-      */
-      @media (min-width: 1025px) and (max-width: 1280px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW1025pxTo1280px)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Laptops, Desktops
+              ##Screen = B/w 1025px to 1280px
+            */
+            @media (min-width: 1025px) and (max-width: 1280px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW1025pxTo1280px)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      /*
-        ##Device = Tablets, Ipads (portrait)
-        ##Screen = B/w 768px to 1024px
-      */
-      @media (min-width: 768px) and (max-width: 1024px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW768pxTo1024px)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Tablets, Ipads (portrait)
+              ##Screen = B/w 768px to 1024px
+            */
+            @media (min-width: 768px) and (max-width: 1024px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW768pxTo1024px)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      /*
-        ##Device = Tablets, Ipads (landscape)
-        ##Screen = B/w 768px to 1024px
-      */
-      @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW768pxTo1024px-px-landscape)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Tablets, Ipads (landscape)
+              ##Screen = B/w 768px to 1024px
+            */
+            @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW768pxTo1024px-px-landscape)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      /*
-        ##Device = Low Resolution Tablets, Mobiles (Landscape)
-        ##Screen = B/w 481px to 767px
-      */
-      @media (min-width: 481px) and (max-width: 767px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW481pxTo767px)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Low Resolution Tablets, Mobiles (Landscape)
+              ##Screen = B/w 481px to 767px
+            */
+            @media (min-width: 481px) and (max-width: 767px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW481pxTo767px)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      /*
-        ##Device = Most of the Smartphones Mobiles (Portrait)
-        ##Screen = B/w 320px to 480px
-      */
-      @media (min-width: 320px) and (max-width: 480px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW320pxTo480px)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
-        }
-      }
+            /*
+              ##Device = Most of the Smartphones Mobiles (Portrait)
+              ##Screen = B/w 320px to 480px
+            */
+            @media (min-width: 320px) and (max-width: 480px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW320pxTo480px)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
 
-      @media (max-width: 320px) {
-        .item.#{$sizeName} {
-          $calcWidth: percentage(floor((100/((3*$column-count-BW0pxTo320px)+1))*3)/100);
-          width: $calcWidth;
-          -webkit-flex-basis: $calcWidth;
-          -ms-flex-basis: $calcWidth;
-          flex-basis: $calcWidth;
+            @media (max-width: 320px) {
+                .item.#{$sizeName} {
+                    $calcWidth: percentage(floor((100/((3*$column-count-BW0pxTo320px)+1))*3)/100);
+                    width: $calcWidth;
+                    -webkit-flex-basis: $calcWidth;
+                    -ms-flex-basis: $calcWidth;
+                    flex-basis: $calcWidth;
+                }
+            }
         }
-      }
+
+        @include make-size-media('w-44333211',
+            4,
+            4,
+            3,
+            3,
+            3,
+            2,
+            1,
+            1
+        );
+
+        //w-66534321
+
+        @include make-size-media('w-55443211',
+            5,
+            5,
+            4,
+            4,
+            3,
+            2,
+            1,
+            1
+        );
     }
-
-    @include make-size-media('w-44333211',
-            4,
-            4,
-            3,
-            3,
-            3,
-            2,
-            1,
-            1
-    );
-
-    //w-66534321
-
-    @include make-size-media('w-55443211',
-            5,
-            5,
-            4,
-            4,
-            3,
-            2,
-            1,
-            1
-    );
-  }
+    .ScrollCarousel-next,
+    .ScrollCarousel-previous {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        i {
+            font-size: 3rem;
+        }
+    }
+    .ScrollCarousel-next {
+        left: 0;
+    }
+    .ScrollCarousel-previous {
+        right: 0;
+    }
 }
