--- a/public/acm/AlaatvCustomFiles/css/customStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/customStyle.css
@@ -384,7 +384,7 @@
 }
 
 @media only screen and (min-width: 1700px) {
-    .m-portlet.boxed {
+    .boxed {
         margin-left: 65px;
         margin-right: 65px;
     }
