--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search/searchResult.scss
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search/searchResult.scss
@@ -84,7 +84,7 @@
                 .detailes {
                     z-index: 2;
                     position: relative;
-                    display: flex;
+                    display: block;
                     flex-flow: column;
                     align-items: stretch;
                     align-self: stretch;
@@ -131,6 +131,15 @@
                         padding-left: 100px;
                         padding-right: 20px;
                         line-height: 25px;
+
+
+                        @media only screen and (max-width: 700px) {
+                            & {
+                                padding-top: 40px;
+                                padding-left: 10px;
+                                padding-right: 10px;
+                            }
+                        }
 
                         /*padding-right: 20px;*/
                         /*padding-left: 0;*/
@@ -200,7 +209,6 @@
             @media only screen and (max-width: 1024px) {
 
                 & {
-
                     display: block;
                     -webkit-box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.75);
                     -moz-box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.75);
