--- a/public/acm/AlaatvCustomFiles/css/page/user/dashboard.css
+++ b/public/acm/AlaatvCustomFiles/css/page/user/dashboard.css
@@ -294,6 +294,17 @@
         display: none;
     }
 }
+@media (max-width: 800px) {
+
+    .select-items .select-item .setRow {
+        flex-direction: column;
+        align-items: center;
+    }
+    .select-items .select-item .setRow .setRow-label {
+        width: 100%;
+        margin: 0;
+    }
+}
 @media (max-width: 600px) {
     .myProductsRow .productsCol {
         flex: 0 0 100%;
@@ -304,11 +315,9 @@
     }
 }
 
+
 .setRow .setRow-label {
     width: calc( 100% - 205px );
     overflow: hidden;
     margin-left: 5px;
-}
-.CustomDropDown .select-items .select-item {
-    adding-left: 5px;
 }
