--- a/public/acm/AlaatvCustomFiles/components/CustomDropDown/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/CustomDropDown/style.scss
@@ -80,6 +80,7 @@
             border-radius: 5px;
             color: #f66e84;
             font-size: 1.8rem;
+            background: white;
         }
 
         &.select-arrow-active:after {
