--- a/public/acm/AlaatvCustomFiles/css/page/product/show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product/show.css
@@ -286,9 +286,27 @@
     font-size: 1.2rem;
     text-decoration: none;}
 
+@media (max-width: 600px) {
+    .m-timeline-3 .m-timeline-3__item::before {
+        right: 1rem;
+        top: 2.5rem;
+    }
+    .m-timeline-3 .m-timeline-3__item .m-timeline-3__item-time {
+        display: ruby;
+        width: 100%;
+        text-align: right;
+        padding-right: 2rem;
+    }
+    .m-timeline-3 .m-timeline-3__item .m-timeline-3__item-desc {
+        padding-right: 2rem;
+        padding-top: 3rem;
+    }
+}
+
 @media (max-width: 768px) {
     .m-timeline-3 .m-timeline-3__item {
-        margin-right: 0; } }
+        margin-right: 0; }
+}
 
 .m-timeline-3__item .m-timeline-3__item-time {
     color: #898b96; }
