--- a/public/acm/AlaatvCustomFiles/css/page/product/customShow/raheAbrisham.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product/customShow/raheAbrisham.css
@@ -37,6 +37,10 @@
 }
 
 /*pictureAndMap*/
+.mapContainer {
+    width: 100%;
+    height: 500px;
+}
 .MapStepLabel {
     position: fixed;
     z-index: 9;
@@ -48,11 +52,34 @@
 .MapStepLabel:before {
     content: ' ';
     position: absolute;
+}
+.MapStepLabel.top:before {
     border-top: solid 10px #b8a288;
     border-left: solid 10px transparent;
     border-right: solid 10px transparent;
     top: 23px;
     left: calc( 50% - 10px);
+}
+.MapStepLabel.bottom:before {
+    border-left: solid 10px transparent;
+    border-right: solid 10px transparent;
+    border-bottom: solid 10px #b8a288;
+    top: -10px;
+    left: calc( 50% - 10px);
+}
+.MapStepLabel.left:before {
+    border-top: solid 10px transparent;
+    border-bottom: solid 10px transparent;
+    border-left: solid 10px #b8a288;
+    top: calc( 50% - 10px);
+    right: -8px;
+}
+.MapStepLabel.right:before {
+    border-top: solid 10px transparent;
+    border-bottom: solid 10px transparent;
+    border-right: solid 10px #b8a288;
+    top: calc( 50% - 10px);
+    left: -8px;
 }
 .display-5 {
     font-size: 2rem;
@@ -69,6 +96,11 @@
     fill: transparent;
 }
 
+.btnShowRepurchase,
+.btnShowHelpMessage,
+.btnShowLiveDescription {
+    min-height: 74px;
+}
 @media (max-width: 800px) {
     .display-5 {
         font-size: 1.2rem;
@@ -151,8 +183,19 @@
     top: 20px;
     right: 20px;
 }
+#m_tabs_pamphlet .ScrollCarousel .ScrollCarousel-Items{
+    min-height: 150px;
+    align-items: center;
+}
 .entekhabeFarsangVideoAndPamphlet .tab-content {
     padding-right: 40px;
+}
+.entekhabeFarsangVideoAndPamphlet .tab-content .showVideoMessage,
+.entekhabeFarsangVideoAndPamphlet .tab-content .showPamphletMessage {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    top: calc( 50% - 20px );
 }
 .entekhabeFarsangVideoAndPamphlet .tab-content .tab-pane {
     position: relative;
@@ -168,7 +211,7 @@
     background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(255,255,255,0) 60%);
 }
 .entekhabeFarsangVideoAndPamphlet .tab-content .ScrollCarousel  {
-    min-height: 110px;
+    min-height: 155px;
 }
 .entekhabeFarsangVideoAndPamphlet .tab-content .tab-pane .ScrollCarousel-next,
 .entekhabeFarsangVideoAndPamphlet .tab-content .tab-pane .ScrollCarousel-previous {
