--- a/public/acm/AlaatvCustomFiles/css/page/product/customShow/raheAbrisham.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product/customShow/raheAbrisham.css
@@ -268,6 +268,10 @@
     display: flex;
     align-items: center;
 }
+.pamphletItem .pamphletItem-thumbnail svg {
+    width: 40px;
+    height: 40px;
+}
 .pamphletItem .pamphletItem-name {
     flex-basis: 85%;
     max-width: 85%;
