--- a/public/acm/AlaatvCustomFiles/css/page/product/customShow/raheAbrisham.css
+++ b/public/acm/AlaatvCustomFiles/css/page/product/customShow/raheAbrisham.css
@@ -39,9 +39,10 @@
 }
 
 /*pictureAndMap*/
-.mapContainer {
+#mapContainer {
     width: 100%;
     height: 500px;
+    background: #29abe2;
 }
 .MapStepLabel {
     position: fixed;
