--- a/public/acm/AlaatvCustomFiles/components/MegaMenu/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/MegaMenu/style.scss
@@ -35,6 +35,17 @@
                     transition: all 0.2s;
                     //height: 100%;
 
+                    a {
+                        display: flex;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        align-items: center;
+                        justify-content: center;
+                    }
+
                     //.a--MegaMenu-categoryItem-pointer {
                     //    position: absolute;
                     //    top: 0;
