--- a/public/acm/AlaatvCustomFiles/components/Favorite/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/Favorite/style.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   border: none;
   border-radius: 50%;
-  box-shadow: 5px 5px 30px -10px #403A3E;
+  //box-shadow: 5px 5px 30px -10px #403A3E;
   outline: none;
   width: 50px;
 
