set show split video and pamphlet

--- a/public/acm/AlaatvCustomFiles/css/page/set-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/set-show.css
@@ -52,3 +52,11 @@
 .rightSideAdBanner a {
     display: block;
 }
+.setVideoPamphletTabs .nav {
+    background: #f2f3f8;
+    border-radius: 5px;
+}
+.setVideoPamphletTabs .nav-pills .nav-link.active,
+.setVideoPamphletTabs .nav-pills .show > .nav-link {
+    border-radius: 5px;
+}
