--- a/public/acm/AlaatvCustomFiles/css/page/content-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/content-show.css
@@ -35,6 +35,7 @@
 
 .a--nuevo-alaa-theme.a--media-parent {
     margin-top: 0;
+    padding-bottom: 0;
 }
 
 .btnAddToCart .fa.fa-cart-arrow-down {
@@ -74,6 +75,29 @@
     top: -20px;
 }
 
+.alert.m-alert--outline.alert-success {
+    display: flex;
+    justify-content: space-between;
+    background-color: #fff;
+    border-color: #34bfa3;
+    color: #34bfa3;
+    font-weight: 400;
+}
+.alert.m-alert--outline.alert-success .m-link {
+    color: #34bfa3;
+}
+.alert.m-alert--icon .m-alert__text {
+    vertical-align: middle;
+    width: auto;
+    padding: 0 1.25rem;
+}
+.m-portlet.m-portlet--success.m-portlet--head-solid-bg {
+    background: white;
+}
+.downloadLinkColumn .m-portlet,
+.detailesColumn .m-portlet {
+    margin: 0 !important;
+}
 /*media query*/
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
     .a-widget5 .a-widget5__item .a-widget5__content .a-widget5__pic,
