--- a/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
+++ b/public/acm/AlaatvCustomFiles/css/page/pages/content-search/content-search.css
@@ -135,8 +135,8 @@
     padding-right: 30px;
     position: absolute;
     bottom: 0;
-    height: 20px;
-
+    height: 25px;
+    line-height: 25px;
     background-color: #ff9000;
     color: white;
     font-weight: bold;
