--- a/public/acm/AlaatvCustomFiles/css/page/content-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/content-show.css
@@ -89,7 +89,6 @@
 .alert.m-alert--icon .m-alert__text {
     vertical-align: middle;
     width: auto;
-    padding: 0 1.25rem;
 }
 .m-portlet.m-portlet--success.m-portlet--head-solid-bg {
     background: white;
@@ -118,34 +117,42 @@
     text-align: center;
 }
 
-/*scrollbar*/
-/* width */
-.AlaaScroll {
-
-    scrollbar-color: #ff9000 #ffe0b8;
-    scrollbar-width: thin;
+.m-portlet {
+    position: relative;
+}
+.blockedContent {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #0000004a;
+    z-index: 2;
+    cursor: not-allowed;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.blockedContent .ParentProductsItem {
+    background-color: white;
+    -webkit-box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 5px -3px rgba(0,0,0,0.75);
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 26%;
+    flex: 0 0 26%;
+    max-width: 26%;
+}
+.blockedContent .ParentProductsItem .image img {
+    width: 100%;
+}
+.blockedContent .ParentProductsItem .title {
+    padding: 3px 5px;
+    font-size: 0.9rem;
+    line-height: 0.9rem;
 }
 
-.AlaaScroll::-webkit-scrollbar {
-    width: 9px;
-    height: 9px;
-}
-
-/* Track */
-.AlaaScroll::-webkit-scrollbar-track {
-    background: #ffefdb;
-}
-
-/* Handle */
-.AlaaScroll::-webkit-scrollbar-thumb {
-    background: #ff9000;
-    border-radius: 10px;
-}
-
-/* Handle on hover */
-.AlaaScroll::-webkit-scrollbar-thumb:hover {
-    background: #ff6c00;
-}
 /*media query*/
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
     .a-widget5 .a-widget5__item .a-widget5__content .a-widget5__pic,
