--- a/public/acm/AlaatvCustomFiles/css/page/content-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/content-show.css
@@ -152,6 +152,46 @@
     font-size: 0.9rem;
     line-height: 0.9rem;
 }
+.a--block-item.a--block-type-content .a--block-infoWrapper {
+    margin-bottom: 5px;
+}
+.a--block-item.a--block-type-product2 button,
+.a--block-item.a--block-type-content .a--block-infoWrapper .a--block-titleWrapper
+.a--block-item.a--block-type-set .a--block-infoWrapper .a--block-titleWrapper {
+    height: 50px;
+}
+
+/*@-webkit-keyframes carouselHeadPuls {*/
+/*    0% { left:0px;opacity: 0;}*/
+/*    50% {left:20px;opacity: 0.3;}*/
+/*    100%{ left:100px;opacity: 0;}*/
+/*}*/
+@keyframes carouselHeadPuls {
+    0% { right:-2%;opacity: 1;}
+    50% {right:40%;opacity: 0.4;}
+    100%{ right:100%;opacity: 0;}
+}
+
+.a--owl-carousel-Wraper .a--owl-carousel-head.puls * {
+    z-index: 0;
+}
+.a--owl-carousel-Wraper .a--owl-carousel-head.puls .puls1,
+.a--owl-carousel-Wraper .a--owl-carousel-head.puls .puls2 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 250px;
+    animation-name: carouselHeadPuls;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    transform: skew(-65deg);
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255, 144, 0, 0.38) 100%);
+    z-index: 0;
+}
+.a--owl-carousel-Wraper .a--owl-carousel-head.puls .puls2 {
+    animation-delay: 0.2s;
+}
 
 /*media query*/
 @media only screen and (max-width: 1100px) and (min-width: 992px) {
