set show section update

--- a/public/acm/AlaatvCustomFiles/css/page/set-show.css
+++ b/public/acm/AlaatvCustomFiles/css/page/set-show.css
@@ -60,3 +60,13 @@
 .setVideoPamphletTabs .nav-pills .show > .nav-link {
     border-radius: 5px;
 }
+
+#btnShowListView,
+#btnShowSectionView,
+.sectionView {
+    display: none;
+}
+
+.listView {
+    display: block;
+}
