--- a/public/acm/AlaatvCustomFiles/components/FormGenerator/style.scss
+++ b/public/acm/AlaatvCustomFiles/components/FormGenerator/style.scss
@@ -13,7 +13,7 @@
             }
             span.inputIcon {
                 position: absolute;
-                height: 100%;
+                height: 39px;
                 display: inline-block;
                 text-align: center;
                 top: 0;
